Style CSS for ArtistIndex + Styling for Home and ArtistIndex headers + CSS Grid for ArtistIndex + Styling for ArtistCard hover, artist image, card title and subtitle ~ Fix Home height, width, padding, flex, for content+ Add vertical scrollbar to Home Container - Remove vertical scrollbar from Main and CurrentContainer

--- a/app/assets/stylesheets/05-main.scss
+++ b/app/assets/stylesheets/05-main.scss
@@ -5,6 +5,7 @@
     background-image: url("https://versify-dev.s3.amazonaws.com/images/ui/universe-background.jpeg");
     background-size: cover;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .current-container {
@@ -14,4 +15,5 @@
     position: absolute;
     top: 85px;
     left: 285px;
+    overflow-y: hidden;
 }
