--- a/app/assets/stylesheets/11-artist-index.scss
+++ b/app/assets/stylesheets/11-artist-index.scss
@@ -1,15 +1,49 @@
 .artist-index-grid {
     display: grid;
-    grid-template-columns: repeat(4) 184px;
-    grid-auto-rows: 184px;
+    /* height: 100vh; */
+    width: 100vw;
+    grid-template-columns: repeat(4, 216px);
+    grid-auto-rows: minmax(294px, 294px);
+    grid-gap: 20px;
+    text-align: center;
 }
 
-.index-grid-item {
-    background-color: skyblue;
-    display: block;
+.artist-index-header {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-bottom: 25px;
 }
 
-.index-grid-item img {
+.card {
+    background-color: #181818;
+    padding: 10px;
+    border-radius: 8px;
+
+}
+
+.card:hover{
+    background-color: #292929;
+    transition: 0.3s;
+}
+
+.card img {
     height: 184px;
     width: 184px;
+    margin-bottom: 20px;
+    border-radius: 50%;
+}
+
+.card-title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: left;
+}
+
+.card-subtitle {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
+    margin-top: 15px;
+    text-align: left;
 }
